components/3.22.x/twitter-directmessage-component.md
# Twitter Direct Message

**Since Camel 2.10**

**Both producer and consumer are supported**

The Twitter Direct Message Component consumes/produces a user’s direct messages.

> **Note**
> **Consumer interval of time**
>
> When using the Direct Message consumer, it will consider only the last 30 days direct messages

## Configuring Options

Camel components are configured on two separate levels:

-   component level
    
-   endpoint level
    

### Configuring Component Options

The component level is the highest level which holds general and common configurations that are inherited by the endpoints. For example a component may have security settings, credentials for authentication, urls for network connection and so forth.

Some components only have a few options, and others may have many. Because components typically have pre configured defaults that are commonly used, then you may often only need to configure a few options on a component; or none at all.

Configuring components can be done with the [Component DSL](../../manual/component-dsl.md), in a configuration file (application.properties|yaml), or directly with Java code.

### Configuring Endpoint Options

Where you find yourself configuring the most is on endpoints, as endpoints often have many options, which allows you to configure what you need the endpoint to do. The options are also categorized into whether the endpoint is used as consumer (from) or as a producer (to), or used for both.

Configuring endpoints is most often done directly in the endpoint URI as path and query parameters. You can also use the [Endpoint DSL](../../manual/Endpoint-dsl.md) and [DataFormat DSL](../../manual/dataformat-dsl.md) as a _type safe_ way of configuring endpoints and data formats in Java.

A good practice when configuring options is to use [Property Placeholders](../../manual/using-propertyplaceholder.md), which allows to not hardcode urls, port numbers, sensitive information, and other settings. In other words placeholders allows to externalize the configuration from your code, and gives more flexibility and reuse.

The following two sections lists all the options, firstly for the component followed by the endpoint.

## Component Options

The Twitter Direct Message component supports 11 options, which are listed below.

   
| Name | Description | Default | Type |
| --- | --- | --- | --- |
| **bridgeErrorHandler** (consumer) | Allows for bridging the consumer to the Camel routing Error Handler, which mean any exceptions occurred while the consumer is trying to pickup incoming messages, or the likes, will now be processed as a message and handled by the routing Error Handler. By default the consumer will use the org.apache.camel.spi.ExceptionHandler to deal with exceptions, that will be logged at WARN or ERROR level and ignored. | false | boolean |
| **lazyStartProducer** (producer) | Whether the producer should be started lazy (on the first message). By starting lazy you can use this to allow CamelContext and routes to startup in situations where a producer may otherwise fail during starting and cause the route to fail being started. By deferring this startup to be lazy then the startup failure can be handled during routing messages via Camel’s routing error handlers. Beware that when the first message is processed then creating and starting the producer may take a little time and prolong the total processing time of the processing. | false | boolean |
| **autowiredEnabled** (advanced) | Whether autowiring is enabled. This is used for automatic autowiring options (the option must be marked as autowired) by looking up in the registry to find if there is a single instance of matching type, which then gets configured on the component. This can be used for automatic configuring JDBC data sources, JMS connection factories, AWS Clients, etc. | true | boolean |
| **httpProxyHost** (proxy) | The http proxy host which can be used for the camel-twitter. |  | String |
| **httpProxyPassword** (proxy) | The http proxy password which can be used for the camel-twitter. |  | String |
| **httpProxyPort** (proxy) | The http proxy port which can be used for the camel-twitter. |  | int |
| **httpProxyUser** (proxy) | The http proxy user which can be used for the camel-twitter. |  | String |
| **accessToken** (security) | The access token. |  | String |
| **accessTokenSecret** (security) | The access token secret. |  | String |
| **consumerKey** (security) | The consumer key. |  | String |
| **consumerSecret** (security) | The consumer secret. |  | String |

## Endpoint Options

The Twitter Direct Message endpoint is configured using URI syntax:

twitter-directmessage:user

with the following path and query parameters:

### Path Parameters (1 parameters)

   
| Name | Description | Default | Type |
| --- | --- | --- | --- |
| **user** (common) | **Required** The user name to send a direct message. This will be ignored for consumer. |  | String |

### Query Parameters (42 parameters)

   
| Name | Description | Default | Type |
| --- | --- | --- | --- |
| **sendEmptyMessageWhenIdle** (consumer) | If the polling consumer did not poll any files, you can enable this option to send an empty message (no body) instead. | false | boolean |
| **type** (consumer) | 
Endpoint type to use.

Enum values:

-   polling
    
-   direct
    





 | polling | EndpointType |
| **bridgeErrorHandler** (consumer (advanced)) | Allows for bridging the consumer to the Camel routing Error Handler, which mean any exceptions occurred while the consumer is trying to pickup incoming messages, or the likes, will now be processed as a message and handled by the routing Error Handler. By default the consumer will use the org.apache.camel.spi.ExceptionHandler to deal with exceptions, that will be logged at WARN or ERROR level and ignored. | false | boolean |
| **distanceMetric** (consumer (advanced)) | 

Used by the geography search, to search by radius using the configured metrics. The unit can either be mi for miles, or km for kilometers. You need to configure all the following options: longitude, latitude, radius, and distanceMetric.

Enum values:

-   km
    
-   mi
    





 | km | String |
| **exceptionHandler** (consumer (advanced)) | To let the consumer use a custom ExceptionHandler. Notice if the option bridgeErrorHandler is enabled then this option is not in use. By default the consumer will deal with exceptions, that will be logged at WARN or ERROR level and ignored. |  | ExceptionHandler |
| **exchangePattern** (consumer (advanced)) | 

Sets the exchange pattern when the consumer creates an exchange.

Enum values:

-   InOnly
    
-   InOut
    
-   InOptionalOut
    





 |  | ExchangePattern |
| **extendedMode** (consumer (advanced)) | Used for enabling full text from twitter (eg receive tweets that contains more than 140 characters). | true | boolean |
| **latitude** (consumer (advanced)) | Used by the geography search to search by latitude. You need to configure all the following options: longitude, latitude, radius, and distanceMetric. |  | Double |
| **locations** (consumer (advanced)) | Bounding boxes, created by pairs of lat/lons. Can be used for filter. A pair is defined as lat,lon. And multiple pairs can be separated by semicolon. |  | String |
| **longitude** (consumer (advanced)) | Used by the geography search to search by longitude. You need to configure all the following options: longitude, latitude, radius, and distanceMetric. |  | Double |
| **pollStrategy** (consumer (advanced)) | A pluggable org.apache.camel.PollingConsumerPollingStrategy allowing you to provide your custom implementation to control error handling usually occurred during the poll operation before an Exchange have been created and being routed in Camel. |  | PollingConsumerPollStrategy |
| **radius** (consumer (advanced)) | Used by the geography search to search by radius. You need to configure all the following options: longitude, latitude, radius, and distanceMetric. |  | Double |
| **lazyStartProducer** (producer (advanced)) | Whether the producer should be started lazy (on the first message). By starting lazy you can use this to allow CamelContext and routes to startup in situations where a producer may otherwise fail during starting and cause the route to fail being started. By deferring this startup to be lazy then the startup failure can be handled during routing messages via Camel’s routing error handlers. Beware that when the first message is processed then creating and starting the producer may take a little time and prolong the total processing time of the processing. | false | boolean |
| **count** (filter) | Limiting number of results per page. | 5 | Integer |
| **filterOld** (filter) | Filter out old tweets, that has previously been polled. This state is stored in memory only, and based on last tweet id. | true | boolean |
| **lang** (filter) | The lang string ISO\_639-1 which will be used for searching. |  | String |
| **numberOfPages** (filter) | The number of pages result which you want camel-twitter to consume. | 1 | Integer |
| **sinceId** (filter) | The last tweet id which will be used for pulling the tweets. It is useful when the camel route is restarted after a long running. | 1 | long |
| **userIds** (filter) | To filter by user ids for filter. Multiple values can be separated by comma. |  | String |
| **httpProxyHost** (proxy) | The http proxy host which can be used for the camel-twitter. Can also be configured on the TwitterComponent level instead. |  | String |
| **httpProxyPassword** (proxy) | The http proxy password which can be used for the camel-twitter. Can also be configured on the TwitterComponent level instead. |  | String |
| **httpProxyPort** (proxy) | The http proxy port which can be used for the camel-twitter. Can also be configured on the TwitterComponent level instead. |  | Integer |
| **httpProxyUser** (proxy) | The http proxy user which can be used for the camel-twitter. Can also be configured on the TwitterComponent level instead. |  | String |
| **backoffErrorThreshold** (scheduler) | The number of subsequent error polls (failed due some error) that should happen before the backoffMultipler should kick-in. |  | int |
| **backoffIdleThreshold** (scheduler) | The number of subsequent idle polls that should happen before the backoffMultipler should kick-in. |  | int |
| **backoffMultiplier** (scheduler) | To let the scheduled polling consumer backoff if there has been a number of subsequent idles/errors in a row. The multiplier is then the number of polls that will be skipped before the next actual attempt is happening again. When this option is in use then backoffIdleThreshold and/or backoffErrorThreshold must also be configured. |  | int |
| **delay** (scheduler) | Milliseconds before the next poll. | 30000 | long |
| **greedy** (scheduler) | If greedy is enabled, then the ScheduledPollConsumer will run immediately again, if the previous run polled 1 or more messages. | false | boolean |
| **initialDelay** (scheduler) | Milliseconds before the first poll starts. | 1000 | long |
| **repeatCount** (scheduler) | Specifies a maximum limit of number of fires. So if you set it to 1, the scheduler will only fire once. If you set it to 5, it will only fire five times. A value of zero or negative means fire forever. | 0 | long |
| **runLoggingLevel** (scheduler) | 

The consumer logs a start/complete log line when it polls. This option allows you to configure the logging level for that.

Enum values:

-   TRACE
    
-   DEBUG
    
-   INFO
    
-   WARN
    
-   ERROR
    
-   OFF
    





 | TRACE | LoggingLevel |
| **scheduledExecutorService** (scheduler) | Allows for configuring a custom/shared thread pool to use for the consumer. By default each consumer has its own single threaded thread pool. |  | ScheduledExecutorService |
| **scheduler** (scheduler) | To use a cron scheduler from either camel-spring or camel-quartz component. Use value spring or quartz for built in scheduler. | none | Object |
| **schedulerProperties** (scheduler) | To configure additional properties when using a custom scheduler or any of the Quartz, Spring based scheduler. |  | Map |
| **startScheduler** (scheduler) | Whether the scheduler should be auto started. | true | boolean |
| **timeUnit** (scheduler) | 

Time unit for initialDelay and delay options.

Enum values:

-   NANOSECONDS
    
-   MICROSECONDS
    
-   MILLISECONDS
    
-   SECONDS
    
-   MINUTES
    
-   HOURS
    
-   DAYS
    





 | MILLISECONDS | TimeUnit |
| **useFixedDelay** (scheduler) | Controls if fixed delay or fixed rate is used. See ScheduledExecutorService in JDK for details. | true | boolean |
| **accessToken** (security) | The access token. Can also be configured on the TwitterComponent level instead. |  | String |
| **accessTokenSecret** (security) | The access secret. Can also be configured on the TwitterComponent level instead. |  | String |
| **consumerKey** (security) | The consumer key. Can also be configured on the TwitterComponent level instead. |  | String |
| **consumerSecret** (security) | The consumer secret. Can also be configured on the TwitterComponent level instead. |  | String |
| **sortById** (sort) | Sorts by id, so the oldest are first, and newest last. | true | boolean |

## Message Headers

The Twitter Direct Message component supports 2 message header(s), which is/are listed below:

   
| Name | Description | Default | Type |
| --- | --- | --- | --- |
| **CamelTwitterUser** (common) Constant: [`TWITTER_USER`](https://javadoc.io/doc/org.apache.camel/camel-twitter/latest/org/apache/camel/component/twitter/TwitterConstants.html#TWITTER_USER) | The user. |  | String |
| **CamelTwitterEventType** (common) Constant: [`TWITTER_EVENT_TYPE`](https://javadoc.io/doc/org.apache.camel/camel-twitter/latest/org/apache/camel/component/twitter/TwitterConstants.html#TWITTER_EVENT_TYPE) | The type of event. The supported values are the values of the enum org.apache.camel.component.twitter.consumer.TwitterEventType. |  | String |

## Spring Boot Auto-Configuration

When using twitter-directmessage with Spring Boot make sure to use the following Maven dependency to have support for auto configuration:

```xml
<dependency>
  <groupId>org.apache.camel.springboot</groupId>
  <artifactId>camel-twitter-starter</artifactId>
  <version>x.x.x</version>
  <!-- use the same version as your Camel core version -->
</dependency>
```

The component supports 36 options, which are listed below.

   
| Name | Description | Default | Type |
| --- | --- | --- | --- |
| **camel.component.twitter-directmessage.access-token** | The access token. |  | String |
| **camel.component.twitter-directmessage.access-token-secret** | The access token secret. |  | String |
| **camel.component.twitter-directmessage.autowired-enabled** | Whether autowiring is enabled. This is used for automatic autowiring options (the option must be marked as autowired) by looking up in the registry to find if there is a single instance of matching type, which then gets configured on the component. This can be used for automatic configuring JDBC data sources, JMS connection factories, AWS Clients, etc. | true | Boolean |
| **camel.component.twitter-directmessage.bridge-error-handler** | Allows for bridging the consumer to the Camel routing Error Handler, which mean any exceptions occurred while the consumer is trying to pickup incoming messages, or the likes, will now be processed as a message and handled by the routing Error Handler. By default the consumer will use the org.apache.camel.spi.ExceptionHandler to deal with exceptions, that will be logged at WARN or ERROR level and ignored. | false | Boolean |
| **camel.component.twitter-directmessage.consumer-key** | The consumer key. |  | String |
| **camel.component.twitter-directmessage.consumer-secret** | The consumer secret. |  | String |
| **camel.component.twitter-directmessage.enabled** | Whether to enable auto configuration of the twitter-directmessage component. This is enabled by default. |  | Boolean |
| **camel.component.twitter-directmessage.http-proxy-host** | The http proxy host which can be used for the camel-twitter. |  | String |
| **camel.component.twitter-directmessage.http-proxy-password** | The http proxy password which can be used for the camel-twitter. |  | String |
| **camel.component.twitter-directmessage.http-proxy-port** | The http proxy port which can be used for the camel-twitter. |  | Integer |
| **camel.component.twitter-directmessage.http-proxy-user** | The http proxy user which can be used for the camel-twitter. |  | String |
| **camel.component.twitter-directmessage.lazy-start-producer** | Whether the producer should be started lazy (on the first message). By starting lazy you can use this to allow CamelContext and routes to startup in situations where a producer may otherwise fail during starting and cause the route to fail being started. By deferring this startup to be lazy then the startup failure can be handled during routing messages via Camel’s routing error handlers. Beware that when the first message is processed then creating and starting the producer may take a little time and prolong the total processing time of the processing. | false | Boolean |
| **camel.component.twitter-search.access-token** | The access token. |  | String |
| **camel.component.twitter-search.access-token-secret** | The access token secret. |  | String |
| **camel.component.twitter-search.autowired-enabled** | Whether autowiring is enabled. This is used for automatic autowiring options (the option must be marked as autowired) by looking up in the registry to find if there is a single instance of matching type, which then gets configured on the component. This can be used for automatic configuring JDBC data sources, JMS connection factories, AWS Clients, etc. | true | Boolean |
| **camel.component.twitter-search.bridge-error-handler** | Allows for bridging the consumer to the Camel routing Error Handler, which mean any exceptions occurred while the consumer is trying to pickup incoming messages, or the likes, will now be processed as a message and handled by the routing Error Handler. By default the consumer will use the org.apache.camel.spi.ExceptionHandler to deal with exceptions, that will be logged at WARN or ERROR level and ignored. | false | Boolean |
| **camel.component.twitter-search.consumer-key** | The consumer key. |  | String |
| **camel.component.twitter-search.consumer-secret** | The consumer secret. |  | String |
| **camel.component.twitter-search.enabled** | Whether to enable auto configuration of the twitter-search component. This is enabled by default. |  | Boolean |
| **camel.component.twitter-search.http-proxy-host** | The http proxy host which can be used for the camel-twitter. |  | String |
| **camel.component.twitter-search.http-proxy-password** | The http proxy password which can be used for the camel-twitter. |  | String |
| **camel.component.twitter-search.http-proxy-port** | The http proxy port which can be used for the camel-twitter. |  | Integer |
| **camel.component.twitter-search.http-proxy-user** | The http proxy user which can be used for the camel-twitter. |  | String |
| **camel.component.twitter-search.lazy-start-producer** | Whether the producer should be started lazy (on the first message). By starting lazy you can use this to allow CamelContext and routes to startup in situations where a producer may otherwise fail during starting and cause the route to fail being started. By deferring this startup to be lazy then the startup failure can be handled during routing messages via Camel’s routing error handlers. Beware that when the first message is processed then creating and starting the producer may take a little time and prolong the total processing time of the processing. | false | Boolean |
| **camel.component.twitter-timeline.access-token** | The access token. |  | String |
| **camel.component.twitter-timeline.access-token-secret** | The access token secret. |  | String |
| **camel.component.twitter-timeline.autowired-enabled** | Whether autowiring is enabled. This is used for automatic autowiring options (the option must be marked as autowired) by looking up in the registry to find if there is a single instance of matching type, which then gets configured on the component. This can be used for automatic configuring JDBC data sources, JMS connection factories, AWS Clients, etc. | true | Boolean |
| **camel.component.twitter-timeline.bridge-error-handler** | Allows for bridging the consumer to the Camel routing Error Handler, which mean any exceptions occurred while the consumer is trying to pickup incoming messages, or the likes, will now be processed as a message and handled by the routing Error Handler. By default the consumer will use the org.apache.camel.spi.ExceptionHandler to deal with exceptions, that will be logged at WARN or ERROR level and ignored. | false | Boolean |
| **camel.component.twitter-timeline.consumer-key** | The consumer key. |  | String |
| **camel.component.twitter-timeline.consumer-secret** | The consumer secret. |  | String |
| **camel.component.twitter-timeline.enabled** | Whether to enable auto configuration of the twitter-timeline component. This is enabled by default. |  | Boolean |
| **camel.component.twitter-timeline.http-proxy-host** | The http proxy host which can be used for the camel-twitter. |  | String |
| **camel.component.twitter-timeline.http-proxy-password** | The http proxy password which can be used for the camel-twitter. |  | String |
| **camel.component.twitter-timeline.http-proxy-port** | The http proxy port which can be used for the camel-twitter. |  | Integer |
| **camel.component.twitter-timeline.http-proxy-user** | The http proxy user which can be used for the camel-twitter. |  | String |
| **camel.component.twitter-timeline.lazy-start-producer** | Whether the producer should be started lazy (on the first message). By starting lazy you can use this to allow CamelContext and routes to startup in situations where a producer may otherwise fail during starting and cause the route to fail being started. By deferring this startup to be lazy then the startup failure can be handled during routing messages via Camel’s routing error handlers. Beware that when the first message is processed then creating and starting the producer may take a little time and prolong the total processing time of the processing. | false | Boolean |